--- a/travel_manage_vue/package.json
+++ b/travel_manage_vue/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "element-ui": "^2.15.10",
+    "moment": "^2.29.4",
     "qs": "^6.10.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
